--- a/jegyvasar/src/index.css
+++ b/jegyvasar/src/index.css
@@ -5,9 +5,26 @@
   box-sizing: border-box;
 }
 
+header{
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
+
 body{
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 20px;  
+}
+
+#cimsor{
+  float: left;
+  vertical-align: top;
+  margin: 0px 30px 0px 30px;
+  font-size: 3rem;
+  font-weight: bold;
+  font-style: italic;
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 5px 20px 5px 20px;
 }
 
 main{
@@ -21,4 +38,29 @@ main{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  margin-top: 50px;
+  
+  .ticketCard{
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px 5px 10px 5px;  
+  }
+
+  h3{
+    text-decoration: underline;
+  }
+
+  h2{
+    font-weight: bold;
+  }
+}
+
+.addBtn{
+  font-size: 1.2rem;
+  border: 1px solid darkslategrey;
+  width: 50%;
+  align-items: center;
+  margin: auto;
+  margin-top: 4px;
+  border-radius: 5px;
 }
