--- a/jegyvasar/src/index.css
+++ b/jegyvasar/src/index.css
@@ -13,6 +13,12 @@ header{
 body{
   margin-top: 20px;
   margin-bottom: 20px;  
+  background: #2A7B9B;
+  background-image: url(/kepek/party.png), linear-gradient(0deg, rgba(42, 123, 155, 1) 0%, rgba(235, 187, 68, 1) 48%, rgba(255, 255, 255, 1));
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
 
 #cimsor{
@@ -44,6 +50,7 @@ main{
     border: 1px solid black;
     border-radius: 10px;
     padding: 10px 5px 10px 5px;  
+    background-color: rgba(235, 188, 68, 0.65);
   }
 
   h3{
@@ -63,4 +70,5 @@ main{
   margin: auto;
   margin-top: 4px;
   border-radius: 5px;
+  background-color: rgba(235, 199, 151, 0.427);
 }
