--- a/jegyvasar/src/index.css
+++ b/jegyvasar/src/index.css
@@ -50,11 +50,12 @@ main{
     border: 1px solid black;
     border-radius: 10px;
     padding: 10px 5px 10px 5px;  
-    background-color: rgba(235, 188, 68, 0.65);
+    background-color: rgba(235, 188, 68, 0.85);
   }
 
   h3{
     text-decoration: underline;
+    font-weight: bold;
   }
 
   h2{
